<resources>
    <string name="app_name">Comic_Marvel</string>
    <string name="login_title">Welcome to the Marvel HQ\'s</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_login_password">Password</string>
    <string name="hint_login_email">Email Address</string>
    <string name="hint_login_pass">Password</string>
    <string name="login_create_account">Create account</string>
    <string name="ckb_login_remember">Remember</string>
    <string name="register_save">SAVE</string>
    <string name="login">LOG IN</string>
    <string name="name_register">Name</string>
    <string name="detail_published_label">Published:</string>
    <string name="detail_price_label">Price:</string>
    <string name="detail_pages_label">Pages:</string>
</resources>