<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00162C">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_external_login"
        android:layout_width="370dp"
        android:layout_height="390dp"
        android:layout_marginTop="185dp"
        app:cardBackgroundColor="#EA2427"
        app:cardCornerRadius="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_external"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_login_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="27sp"
                android:layout_marginTop="25dp"
                android:gravity="center_horizontal|center_vertical"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/login_title" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_internal"
                android:layout_width="match_parent"
                android:layout_height="305dp"
                app:layout_constraintBottom_toBottomOf="@+id/layout_external"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_internal_login"
                    android:layout_width="match_parent"
                    android:layout_height="305dp"
                    android:background="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" >

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="30dp"
                        android:textColorHint="@color/black"
                        app:boxBackgroundColor="@android:color/transparent"
                        app:errorTextColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiet_login_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_login_email"
                            android:inputType="textWebEmailAddress"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="100dp"
                        android:textColorHint="@color/black"
                        app:boxBackgroundColor="@android:color/transparent"
                        app:errorTextColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottom="@id/til_login_email"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiet_login_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_login_pass"
                            android:inputType="number"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <CheckBox
                        android:id="@+id/ckb_login"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="40dp"
                        android:checked="true"
                        app:buttonTint="#FFEA2427"
                        android:textColor="#FF47525E"
                        app:layout_constraintTop_toBottomOf="@id/til_login_password"
                        app:layout_constraintStart_toStart="parent"
                        android:text="@string/ckb_login_remember"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/bt_login_sign"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="210dp"
                        android:backgroundTint="#EA2427"
                        android:padding="0dp"
                        android:text="LOG IN"
                        app:cornerRadius="3dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/til_login_password" />

                    <Button
                        android:id="@+id/bt_login_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="110dp"
                        android:layout_marginTop="260dp"
                        android:background="@android:color/transparent"
                        android:gravity="right"
                        android:padding="0dp"
                        android:text="@string/login_create_account"
                        android:textAllCaps="false"
                        android:textColor="#FF343F4B"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStart="parent"
                        app:layout_constraintTop_toBottomOf="@id/bt_login_sign"
                        tools:ignore="RtlHardcoded" />

                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>