<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00162C">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EA2427"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/register_arrow"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStar_toStartOf="parent"
            app:layout_contraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="45dp"
            android:text="Register"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStar_toEndOf="@+id/register_arrow"
            app:layout_contraintTop_toTopOf="parent"/>

    </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/circule_external"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="406.10dp"
            android:background="@drawable/shape_oval"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/icon_register"
        app:layout_constraintTop_toTopOf="@+id/circule_external"
        app:layout_constraintEnd_toEndOf="@+id/circule_external"
        app:layout_constraintStart_toStartOf="@+id/circule_external"
        app:layout_constraintBottom_toBottomOf="@+id/circule_external"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_external_register"
        android:layout_width="370dp"
        android:layout_height="390dp"
        android:layout_marginTop="250dp"
        app:cardBackgroundColor="#EA2427"
        app:cardCornerRadius="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_external_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/circule_internal"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="315dp"
                android:background="@drawable/shape_oval"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/icon_register"
                app:layout_constraintTop_toTopOf="@+id/circule_internal"
                app:layout_constraintEnd_toEndOf="@+id/circule_internal"
                app:layout_constraintStart_toStartOf="@+id/circule_internal"
                app:layout_constraintBottom_toBottomOf="@+id/circule_internal"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_internal_register"
                android:layout_width="match_parent"
                android:layout_height="305dp"
                app:layout_constraintBottom_toBottomOf="@+id/layout_external_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_internal_register"
                    android:layout_width="match_parent"
                    android:layout_height="305dp"
                    android:background="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" >

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_name_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="30dp"
                        android:textColorHint="@color/black"
                        app:boxBackgroundColor="@android:color/transparent"
                        app:errorTextColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiet_register_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name_register"
                            android:inputType="textWebEmailAddress"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_email_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="100dp"
                        android:textColorHint="@color/black"
                        app:boxBackgroundColor="@android:color/transparent"
                        app:errorTextColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/til_name_register">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiet_register_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_login_email"
                            android:inputType="textWebEmailAddress"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_register_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="170dp"
                        android:textColorHint="@color/black"
                        app:boxBackgroundColor="@android:color/transparent"
                        app:errorTextColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottom="@id/til_email_register"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiet_login_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_login_pass"
                            android:inputType="number"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/bt_save_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="250dp"
                        android:backgroundTint="#EA2427"
                        android:padding="0dp"
                        android:text="@string/register_save"
                        app:cornerRadius="3dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/til_register_password" />

                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
