<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00162C">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_head_detail"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/img_head_detail"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_gravity="center"
                tools:background="@drawable/spider_head"/>

            <ImageView
                android:id="@+id/img_arrow_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintStart_toStartOf="@id/layout_head_detail"
                app:layout_constraintTop_toTopOf="@id/layout_head_detail" />

            <com.google.android.material.card.MaterialCardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="155dp"
                android:layout_height="213dp"
                android:layout_marginStart="20dp"
                card_view:cardBackgroundColor="#4D171717"
                card_view:strokeColor="@color/white"
                card_view:strokeWidth="3dp"
                card_view:cardCornerRadius="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/layout_head_detail">

            <ImageView
                android:id="@+id/iv_comic_image_details"
                android:layout_width="155dp"
                android:layout_height="213dp"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/layout_head_detail"
                tools:src="@drawable/ic_launcher_background"
                tools:ignore="ContentDescription" />

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
        
        <LinearLayout
            android:id="@+id/layout_sumary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/layout_head_detail"
            app:layout_constraintStart_toStartOf="@+id/layout_head_detail">

            <TextView
                android:id="@+id/tv_detail_title"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:paddingStart="20dp"
                tools:text="AMAZING SPIDER-MAN (2014) #1 (MHAN VARIANT)"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/tv_detail_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:paddingStart="20dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:text="The dramatic debut of Morbius the Living Vampire!Dr. Michael Morbius has a lust for blood,and he’s out to sink his fangs into Spider-Man! But the wallcrawleris even more spiderlike than usual - because, in an effort to “cure” himself of his spider-poewers,he’s ended up with four extra limbs! Peter must seek out Curt Connors" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/layout_sumary"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/published_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:paddingStart="20dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/detail_published_label"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_published"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="5dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:text="April 30,2014"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/published_label"/>

            <TextView
                android:id="@+id/price_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:paddingStart="20dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/detail_price_label"
                app:layout_constraintTop_toBottomOf="@+id/published_label"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginStart="5dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:text="$ 5,99"
                app:layout_constraintTop_toBottomOf="@+id/tv_published"
                app:layout_constraintStart_toEndOf="@+id/price_label"/>

            <TextView
                android:id="@+id/pages_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:paddingStart="20dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/detail_pages_label"
                app:layout_constraintTop_toBottomOf="@+id/price_label"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_pages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginStart="5dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:text="38"
                app:layout_constraintTop_toBottomOf="@+id/tv_price"
                app:layout_constraintStart_toEndOf="@+id/pages_label"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>